feat: organize html file

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template do HTML</title>
+
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>API VNW</title>
+
+    <style>
+      h1 {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h2>Hello World</h2>
+    <h1>Bem vindos a API de Livros do VNW</h1>
+    <hr />
+    <h2>Como posso acessar essa API ?</h2>
+    <ul>
+      <li>GET(/livros)</li>
+      <li>POST(/doar)</li>
+    </ul>
   </body>
 </html>
